# Bambu_char

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  NEWS  README.md  publications.bib
etc/appimage/: CMakeLists.txt  appdata.xml.in  appimage_compat_cache_init.cmake.in  commander.in  panda.desktop
etc/clang_plugin/: AdditionalBuiltins.def  CMakeLists.txt  HardekopfLin_AA.cpp  HardekopfLin_AA.hpp  IR.def  LICENSE_INSTALL  LowerMemIntrinsics.cpp  TreeHeightReduction.hpp  arrPart.cpp  arrPart.hpp  canonicalizeHLSStreamGEPPass.cpp  canonicalizeHLSStreamGEPPass.hpp  condInstCombIfTaggedPass.cpp  condInstCombIfTaggedPass.hpp  dumpBambuIr.cpp  loopUnrollArrPartPass.cpp  loopUnrollArrPartPass.hpp  plugin_ASTAnalyzer.cpp  plugin_customSROA.cpp  plugin_dumpBambuIrEmpty.cpp  plugin_dumpBambuIrSSA.cpp  plugin_dumpBambuIrSSACpp.cpp  plugin_expandMemOps.cpp  plugin_includes.hpp  plugin_openmp.cpp  plugin_scalarizeArrayOfFifo.cpp  plugin_scalarizeArrayOfFifo.hpp  plugin_topfname.cpp  pointerResolutionPass.cpp  pointerResolutionPass.hpp
etc/libbambu/: CMakeLists.txt  LICENSE_INSTALL  assert.c  bambu_config.h  bambu_macros.h  memmgr.c  mul32.c.orig  mul32.ll  mul64.c.orig  mul64.ll
etc/libmdpi/: CMakeLists.txt  LICENSE_INSTALL  Makefile.mk  mdpi.c  mdpi_csim.c  mdpi_driver.cpp  mdpi_pp.c
etc/libopenmp/: CMakeLists.txt  LICENSE_INSTALL  kmp.h  kmp_bambu.h  kmp_bambu_names.h  kmp_barrier.cpp  kmp_csupport.cpp  kmp_dispatch.cpp  kmp_dispatch.h  kmp_os.h  kmp_runtime.cpp  kmp_sched.cpp  kmp_single_file.cpp  omp.cpp  omp.h
etc/libtech/: CMakeLists.txt  C_FP_IPs.xml  C_HLS_IPs.xml  C_MEM_IPs.xml  C_OPENMP_IPs.xml  C_PROFILING_IPs.xml  C_STD_IPs.xml  C_VEC_IPs.xml  LICENSE  LICENSE_INSTALL  NC_AXI_IPs.xml  NC_CACHE_IPs.xml  NC_CONCAT_IPs.xml  NC_DATAFLOW_IPs.xml  NC_HLS_IPs.xml  NC_INTERCON_IPs.xml  NC_MEMMAP_IPs.xml  NC_MEM_IPs.xml  NC_OPENMP_IPs.xml  NC_SF_IPs.xml  NC_STD_IPs.xml  NC_TESTBENCH_IPs.xml  NC_VEC_IPs.xml  NC_wishbone_IPs.xml  PANDA_MIT.LICENSE  characterize_all_devices.sh  characterize_device.sh  constraints_STD.xml  constraints_STD_ALUs.xml  copy_characterization.sh
etc/scripts/: CMakeLists.txt  append_libraries.sh  appimage_build_in_container.sh  appimage_check_glibc.sh  appimage_fix_rpath.sh  appimage_wrap_clang_binaries.sh  characterize.py  clang-format-all.sh  cmake_configure  copyright_update.sh  discover_bambu_parameters.py  dist_cleanup.sh  failure_aggregator.py  generate_bambu_parameter_registry.py  hawk.py  mantis.py  run_minimal_workflow_tests.sh  settings.sh  spider.py
ext/: CMakeLists.txt
ext/gzstream/: NOTICE  gzstream.h  gzstream.hpp
src/: BambuParameter.cpp  BambuParameter.hpp  BambuParameterRegistry.cpp  BambuParameterRegistry.hpp  CMakeLists.txt  EucalyptusParameter.cpp  EucalyptusParameter.hpp  LICENSE_INSTALL  Parameter.cpp  Parameter.hpp  bambu-cc-Parameter.cpp  bambu-cc-Parameter.hpp  bambu-cc.cpp  bambu.cpp  bambu.doc  constant_strings.hpp  eucalyptus.cpp  eucalyptus.doc  global_variables.cpp  src.doc
src/HLS/: HLS.doc  HLS_constraints.doc  hls.cpp  hls.hpp  hls_constraints.cpp  hls_constraints.hpp  hls_device.cpp  hls_device.hpp  hls_flow_step_factory.cpp  hls_flow_step_factory.hpp  hls_function_step.cpp  hls_function_step.hpp  hls_manager.cpp  hls_manager.hpp  hls_step.cpp  hls_step.hpp
src/IR/: behavioral_helper.cpp  behavioral_helper.hpp  function_ordered_instructions.cpp  function_ordered_instructions.hpp  ir_basic_block.cpp  ir_basic_block.hpp  ir_common.hpp  ir_helper.cpp  ir_helper.hpp  ir_manager.cpp  ir_manager.hpp  ir_manipulation.cpp  ir_manipulation.hpp  ir_node.cpp  ir_node.hpp  ir_node_dup.cpp  ir_node_dup.hpp  ir_node_factory.cpp  ir_node_factory.hpp  ir_node_finder.cpp  ir_node_finder.hpp  ir_node_mask.cpp  ir_node_mask.hpp  ir_nodes_merger.cpp  ir_nodes_merger.hpp  ir_reindex.cpp  ir_reindex.hpp  ir_reindex_remove.cpp  ir_reindex_remove.hpp  raw_writer.cpp  raw_writer.hpp  type_casting.cpp  type_casting.hpp  var_pp_functor.cpp  var_pp_functor.hpp
src/behavior/: OrderedInstructions.cpp  OrderedInstructions.hpp  application_manager.cpp  application_manager.hpp  basic_block.cpp  basic_block.hpp  basic_blocks_graph_constructor.cpp  basic_blocks_graph_constructor.hpp  behavior.doc  call_graph.cpp  call_graph.hpp  call_graph_manager.cpp  call_graph_manager.hpp  cdfg_edge_info.cpp  cdfg_edge_info.hpp  function_behavior.cpp  function_behavior.hpp  op_graph.cpp  op_graph.hpp  operations_graph_constructor.cpp  operations_graph_constructor.hpp  profiling_information.cpp  profiling_information.hpp
src/circuit/: NP_functionality.cpp  NP_functionality.hpp  cg_graph.cpp  cg_graph.hpp  circuit.doc  structural_manager.cpp  structural_manager.hpp  structural_objects.cpp  structural_objects.hpp
src/constants/: allocation_constants.hpp  bambu_results_xml.hpp  compiler_constants.hpp  constraints_xml.hpp  copyrights_strings.hpp  cost_latency_table.hpp  file_IO_constants.hpp  host_profiling_constants.hpp  host_profiling_xml.hpp  technology_xml.hpp  testbench_generation_constants.hpp
src/design_flows/: design_flow.cpp  design_flow.hpp  design_flow_aux_step.cpp  design_flow_aux_step.hpp  design_flow_factory.cpp  design_flow_factory.hpp  design_flow_graph.cpp  design_flow_graph.hpp  design_flow_manager.cpp  design_flow_manager.hpp  design_flow_step.cpp  design_flow_step.hpp  design_flow_step_factory.cpp  design_flow_step_factory.hpp  non_deterministic_flows.cpp  non_deterministic_flows.hpp
src/frontend_analysis/: application_frontend_flow_step.cpp  application_frontend_flow_step.hpp  bambu_frontend_flow.cpp  bambu_frontend_flow.hpp  complete_bb_graph.cpp  complete_bb_graph.hpp  complete_call_graph.cpp  complete_call_graph.hpp  find_max_transformations.cpp  find_max_transformations.hpp  frontend_flow_step.cpp  frontend_flow_step.hpp  frontend_flow_step_factory.cpp  frontend_flow_step_factory.hpp  function_frontend_flow_step.cpp  function_frontend_flow_step.hpp  symbolic_application_frontend_flow_step.cpp  symbolic_application_frontend_flow_step.hpp
src/graph/: Vertex.hpp  edge_info.hpp  graph.hpp  graph_info.hpp  interference_graph.hpp  (+2 more)
(+1500 files in other folders)
